--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "teste-ebac-ui",
   "version": "1.0.0",
-  "description": "",
+  "description": "Ebac shop: http://lojaebac.ebaconline.art.br/",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -17,9 +17,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
   "homepage": "",
   "devDependencies": {
     "cypress": "^9.7.0"
